Disable no-img-element rule and correct borders on mobile

--- a/src/components/CategoriesGrid/CategoriesGrid.module.scss
+++ b/src/components/CategoriesGrid/CategoriesGrid.module.scss
@@ -16,12 +16,21 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid var.$color-1;
   cursor: pointer;
   overflow: hidden;
 
-  &:first-child {
-    @include mix.respond-to(medium) {
+  @include mix.mobile {
+    border-bottom: 1px solid var.$color-1;
+
+    &:first-child {
+      border-top: 1px solid var.$color-1;
+    }
+  }
+
+  @include mix.respond-to(medium) {
+    border: 1px solid var.$color-1;
+
+    &:first-child {
       grid-row: 1/3;
     }
   }
