--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -5,7 +5,10 @@
   position: relative;
   padding-block: 14px;
   background-color: var.$color-1;
-  border: 1px solid var.$color-1;
+  
+  @include mix.respond-to(medium) {
+    border: 1px solid var.$color-1;
+  }
 }
 
 .content {
