--- a/src/components/ProjectDetails/ProjectDetails.module.scss
+++ b/src/components/ProjectDetails/ProjectDetails.module.scss
@@ -18,13 +18,13 @@
   width: 100%;
   aspect-ratio: 1120 / 720;
   max-height: 77.5vh;
+  border: 2px solid var.$color-1;
+  border-radius: 12px;
   overflow: hidden;
 }
 
 .mainImage {
   object-fit: cover;
-  border: 2px solid var.$color-1;
-  border-radius: 12px;
 }
 
 .thumbsSwiper {
@@ -44,14 +44,10 @@
   aspect-ratio: 200 / 160;
   cursor: pointer;
   overflow: hidden;
-}
-
-.thumbImage {
-  object-fit: cover;
-  transition: 150ms ease-in-out;
 
   border: 2px solid var.$color-1;
   border-radius: 12px;
+  overflow: hidden;
 
   &:hover {
     border-color: var.$color-3;
@@ -60,6 +56,11 @@
   &[data-active="true"] {
     border-color: var.$color-3;
   }
+}
+
+.thumbImage {
+  object-fit: cover;
+  transition: 150ms ease-in-out;
 }
 
 .detailsField {
