--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -1,7 +1,7 @@
 @use "@/styles/variables.scss" as var;
+@use "@/styles/mixins.scss" as mix;
 
 .projects {
   position: relative;
   min-height: 100vh;
-  border: 1px solid var.$color-1;
 }
